# xcdat

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  AGENTS.md  AUTHORS.rst  CITATION.cff  CODE-OF-CONDUCT.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tbump.toml
.claude/: CLAUDE.md
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md  pull_request_template.md  release-drafter.yml
.github/DISCUSSION_TEMPLATE/: 2-questions.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.md  documentation.yml  enhancement_request.yml  feature_request.md  feature_request.yml
.github/workflows/: build_workflow.yml  pypi-release.yml  release-drafter.yml  release_workflow.yml
conda/: dev.yml
conda-env/: ci.yml  dev.yml  dev_min.yml  publish.yml  readthedocs.yml
conda-recipe/: meta.yaml
docs/: Makefile  api.rst  code-of-conduct.rst  conf.py  demos.rst  demos.txt  demos.yml  faqs.rst  gallery.rst  gallery.yml  getting-started-hpc-jupyter.rst  getting-started.rst  getting_started.rst  index.rst  installation.rst  maintainers.rst  make.bat  modules.rst  project_maintenance.rst  team.rst  team.yml  usage.rst  xcdat.rst
docs/_static/: style.css
docs/_templates/: versions.html
docs/demos/1-25-23-cwss-seminar/: introduction-to-xcdat.ipynb  xsearch-xcdat-example.ipynb
docs/demos/24-07-11-scipy-2024/: scipy-2024.ipynb  ta_wget_script_2024-6-25_14-15-11.sh  tas_Amon_wget_script_2024-6-25_11-31-0.sh  wget_script_2024-6-12_13-17-40.sh
docs/demos/cwss-presentation-jan-2023/: xsearch_xcdat_example.ipynb
docs/examples/: 101723-perf-metrics-comparison.py  101723-perf-metrics-test.py  Untitled.ipynb  climatology-and-departures.ipynb  general-demo.ipynb  general-utilities.ipynb  horizontal-regridding.ipynb  introduction-to-xcdat.ipynb  parallel-computing-with-dask.ipynb  parallel-computing-with-dask.py  regridding-horizontal.ipynb  regridding-vertical.ipynb  spatial-average.ipynb  spatial-landsea-mask.ipynb  temporal-average.ipynb
docs/examples/new/: parallel-computing-with-dask.ipynb  spatial-average.ipynb  temporal-average.ipynb
docs/examples/xcdat-cdat-perf-metrics/: 20231018-125456-cdat-runtimes.csv  20231018-125456-xcdat-runtimes.csv  (+2 more)
docs/getting-started-guide/: faqs.rst  getting-started-hpc-jupyter.rst  index.rst  installation.rst  overview.rst
docs/paper/: paper.bib  paper.md
docs/papers/: paper.bib  paper.md
tests/: __init__.py  fixtures.py  test_axis.py  test_bounds.py  test_climatology.py  test_coord.py  test_data.py  test_dataset.py  test_logger.py  test_mask.py  test_regrid.py  test_spatial.py  test_spatial_avg.py  test_temporal.py  test_temporal_avg.py  test_tutorial.py  test_utils.py  test_validation.py  test_variable.py  test_xcdat.py
xcdat/: __init__.py  _data.py  _logger.py  averager.py  axes.py  axis.py  bounds.py  climatology.py  coord.py  dataset.py  log.py  logger.py  mask.py  spatial.py  spatial_avg.py  temporal.py  temporal_avg.py  tutorial.py  utils.py  validation.py  variable.py  xcdat.py
xcdat/regridder/: __init__.py  accessor.py  base.py  grid.py  regrid2.py  xesmf.py  xgcm.py
(+2 files in other folders)
